--- a/exercises/practice/rna-transcription/.meta/config.json
+++ b/exercises/practice/rna-transcription/.meta/config.json
@@ -1,16 +1,18 @@
 {
   "blurb": "Given a DNA strand, return its RNA Complement Transcription.",
   "authors": [],
+  "contributors": [
+    "arueckauer",
+    "dkinzer",
+    "kunicmarko20",
+    "kytrinyx",
+    "lafent",
+    "petemcfarlane"
+  ],
   "files": {
-    "solution": [
-      "RnaTranscription.php"
-    ],
-    "test": [
-      "RnaTranscriptionTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["RnaTranscription.php"],
+    "test": ["RnaTranscriptionTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Hyperphysics",
   "source_url": "http://hyperphysics.phy-astr.gsu.edu/hbase/Organic/transcription.html"
