--- a/exercises/practice/rna-transcription/.meta/config.json
+++ b/exercises/practice/rna-transcription/.meta/config.json
@@ -15,5 +15,5 @@
     "example": [".meta/example.php"]
   },
   "source": "Hyperphysics",
-  "source_url": "http://hyperphysics.phy-astr.gsu.edu/hbase/Organic/transcription.html"
+  "source_url": "https://hyperphysics.phy-astr.gsu.edu/hbase/Organic/transcription.html"
 }
