Sync protein-translation

--- a/exercises/practice/protein-translation/.meta/config.json
+++ b/exercises/practice/protein-translation/.meta/config.json
@@ -13,5 +13,6 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Translate RNA sequences into proteins."
+  "blurb": "Translate RNA sequences into proteins.",
+  "source": "Tyler Long"
 }
